# iaea-crp-f22086

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cttwin.cc
docs/: PROJECT_GUIDE.md  README.md  architecture.md  phantom_specs.md  validation_report.md
docs/decisions/: 0001-physics-list-emstandard-option4.md  0002-placeholder-scan-geometry.md  0003-real-scan-geometry-500mm-sdd.md
docs/features/: pass-0-port.md  pass-1-sensitive-detector-retrospective.md  pass-1-sensitive-detector.md  pass-2-pencil-beam-retrospective.md  pass-2-pencil-beam.md
docs/troubleshooting/: 001-multiple-definition-of-main.md
docs/validation/: geometry-update-500mm-sdd.md  pass-0-port.md  pass-1-detector.md  pass-2-pencil-beam.md
include/: ActionInitialization.hh  Constants.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
macros/: full_scan_template.mac  init_physics.mac  single_projection.mac  vis.mac
python/: assemble_sinogram.py  reconstruct.py  requirements.txt  run_scan.py  validate_beer_lambert.py
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc
